// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Oracle #grow gas for growing by 1 slot when index != cardinality - 1 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 49072,
}
`;

exports[`Oracle #grow gas for growing by 1 slot when index == cardinality - 1 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 49072,
}
`;

exports[`Oracle #grow gas for growing by 10 slots when index != cardinality - 1 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 249214,
}
`;

exports[`Oracle #grow gas for growing by 10 slots when index == cardinality - 1 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 249214,
}
`;

exports[`Oracle #initialize gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 66864,
}
`;

exports[`Oracle #observe before initialization gas for observe since most recent 1`] = `4598`;

exports[`Oracle #observe before initialization gas for single observation at current time 1`] = `3511`;

exports[`Oracle #observe before initialization gas for single observation at current time counterfactually computed 1`] = `3511`;
